# Own-Language

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  Errors.cpp  Errors.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Makefile  Nodes.cpp  Nodes.h  Parser.cpp  Parser.h  Position.cpp  Position.h  RuntimeResult.cpp  RuntimeResult.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Type.h  Values.cpp  Values.h  shell.cpp
